--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FizzBuzz</title>
+  <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-  
+  <div class="container">
+    <h1>FizzBuzzDOM</h1>
+    <div class="grid"></div>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 </html>
