--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>FizzBuzz</title>
   <link rel="stylesheet" href="./css/app.css">
 </head>
-<body>
-  <div class="container">
-    <h1>FizzBuzzDOM</h1>
-    <div class="grid"></div>
-  </div>
+<body class="main-bg-color">
+  <section class="section">
+    <div class="container">
+      <h1 class="text-white">FizzBuzzDOM</h1>
+      <div class="grid"></div>
+    </div>
+  </section>
+  
   <script src="./js/script.js"></script>
 </body>
 </html>
